--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "mongodb": "^2.2.19",
-    "mongoose": "^5.2.15",
+    "mongoose": "^5.2.17",
     "node-datetime": "^2.1.0"
   }
 }
