--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "todo-api",
+  "name": "node-todo-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server\\tests\\server.test.js",
+    "test-watch": "nodemon --exec npm test"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,12 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^2.2.19",
-    "mongoose": "^5.2.17",
-    "node-datetime": "^2.1.0"
+    "mongoose": "^5.2.17"
+  },
+  "devDependencies": {
+    "expect": "^23.6.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0"
   }
 }
