--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server\\server.js",
+    /*"start": "node server\\server.js",*/
+    "start": "node server/server.js",
     "test": "mocha server\\tests\\server.test.js",
     "test-watch": "nodemon --exec npm test"
   },
