--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    /*"start": "node server\\server.js",*/
-    "start": "node server/server.js",
+  "winscripts": {
+    "start": "node server\\server.js",
     "test": "mocha server\\tests\\server.test.js",
+    "test-watch": "nodemon --exec npm test"
+  },
+  "scripts": {
+    "start": "node server/server.js",
+    "test": "mocha server/tests/server.test.js",
     "test-watch": "nodemon --exec npm test"
   },
   "engines": {
